--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -212,4 +212,8 @@
     <value>Calculations with currency columns in related tables are not currently supported in formula columns.</value>
     <comment>Error Message. Used in formula columns when a currency field is referenced on a related table, not currently supported.</comment>
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Using Currency Fields directly in Formula Columns are not supported. Use Decimal(currency field) instead.</value>
+    <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
+  </data>
 </root>
