--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -213,7 +213,7 @@
     <comment>Error Message. Used in formula columns when a currency field is referenced on a related table, not currently supported.</comment>
   </data>
   <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
-    <value>Using Currency Fields directly in Formula Columns are not supported. Use Decimal(currency field) instead.</value>
+    <value>Direct use of currency fields is not yet supported. Use Decimal(CurrencyField) as a workaround but note that decimal has a smaller range than currency.</value>
     <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
 </root>
