Deleted intermediate Data types and use decimal 23,10 for all operations (#325)
* Deleted intermediate types and used decimal and number instead

* change

* update precison (#326)

* update precision

* update

* update

* update

* block direct currency usage in formula columns

* add decimal of currency field support

* Decimal of exchange rate handling

* update precision to (23,10) (#335)

* update precision to (23,10)

* update

* update tests

* update arithmetic op and tests

* Update SqlVisitor.cs

* update variable name

* remove udf

* fix

* fix

* fixing mod function

* fixing mod function

* round down fix

* char and power overflow check try cast

* Mid function bug fix from arithemtic overflow

* fixing table creation script and commenting whole no test

* add overflow check (#336)

* update precision to (23,10)

* update

* update tests

* update arithmetic op and tests

* Update SqlVisitor.cs

* update variable name

* remove udf

* add overflow check

* Update MathFunctions.cs

* updte

* update

* update overflow check

* update

* update

* Update SqlVisitor.cs

* mid function test case

* unit test cases for overflow cases in intermediate operations

* DV range should be inclusive

* Value function fix

* fixing test cases

* typo

* Improvising Value function logic

* addressing comments

* Add tests (#337)

* add tests

* remove range check

* update tests

* fix tests

* Update FullTests.cs

* add test

* update tests

* add test

* Value function fix for comma separator

* adding theory test for currency

* currency usage implementation fisx

* fix

* Fix IsError func (#340)

* add tests

* remove range check

* update tests

* fix tests

* Update FullTests.cs

* add test

* update tests

* add test

* fix IsError func

* add tests

* update

* update intermediate check

* remove test

* a

--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -212,4 +212,8 @@
     <value>Calculations with currency columns in related tables are not currently supported in formula columns.</value>
     <comment>Error Message. Used in formula columns when a currency field is referenced on a related table, not currently supported.</comment>
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Direct use of currency fields is not yet supported. Use Decimal(CurrencyField) as a workaround but note that decimal has a smaller range than currency.</value>
+    <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
+  </data>
 </root>
