--- a/src/strings/DataverseResources.el-GR.resx
+++ b/src/strings/DataverseResources.el-GR.resx
@@ -212,4 +212,8 @@
     <value>Οι υπολογισμοί με στήλες νομισματικής μονάδας σε σχετικούς πίνακες δεν υποστηρίζονται αυτήν τη στιγμή σε στήλες τύπου.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Η άμεση χρήση πεδίων νομισματικής μονάδας δεν υποστηρίζεται ακόμα. Χρησιμοποιήστε το στοιχείο Decimal(CurrencyField) ως λύση, αλλά λάβετε υπόψη ότι τα δεκαδικά ψηφία έχουν μικρότερο εύρος από τη νομισματική μονάδα.</value>
+    
+  </data>
 </root>
