--- a/src/strings/DataverseResources.hi-IN.resx
+++ b/src/strings/DataverseResources.hi-IN.resx
@@ -212,4 +212,8 @@
     <value>संबंधित तालिकाओं में मुद्रा स्तंभों के साथ गणना फिलहाल सूत्र स्तंभों में समर्थित नहीं हैं.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>मुद्रा फ़ील्ड का प्रत्यक्ष उपयोग अभी तक समर्थित नहीं है. दशमलव (CurrencyField) का वैकल्पिक हल के रूप में उपयोग करें लेकिन ध्यान रहे कि दशमलव में मुद्रा की तुलना में एक छोटी सीमा है.</value>
+    
+  </data>
 </root>
