--- a/src/strings/DataverseResources.hu-HU.resx
+++ b/src/strings/DataverseResources.hu-HU.resx
@@ -212,4 +212,8 @@
     <value>A kapcsolódó táblák pénznemoszlopokkal kapcsolatos számításai jelenleg nem támogatottak a képletoszlopokban.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>A pénznemmezők közvetlen használata még nem támogatott. Megoldásként használja a Decimal(CurrencyField) lehetőséget, de felhívjuk figyelmét, hogy a decimális érték kisebb tartománnyal rendelkezik a pénznemnél.</value>
+    
+  </data>
 </root>
