--- a/src/strings/DataverseResources.kk-KZ.resx
+++ b/src/strings/DataverseResources.kk-KZ.resx
@@ -212,4 +212,8 @@
     <value>Қатысты кестелердегі валюта бағандарымен есептеуге қазір формула бағандарында қолдау көрсетілмейді.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Валюталық өрістерді тікелей пайдалануға әлі қолдау көрсетілмейді. Ондық таңбаны (CurrencyField) айналып өту жолы ретінде пайдаланыңыз, бірақ ондық таңбаның валютаға қарағанда ауқымы аз екенін ескеріңіз.</value>
+    
+  </data>
 </root>
