--- a/src/strings/DataverseResources.ms-MY.resx
+++ b/src/strings/DataverseResources.ms-MY.resx
@@ -212,4 +212,8 @@
     <value>Pengiraan dengan lajur mata wang dalam jadual berkaitan tidak disokong pada masa ini dalam lajur formula.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Penggunaan langsung medan mata wang belum disokong. Gunakan Perpuluhan (CurrencyField) sebagai penyelesaian, tetapi ambil perhatian bahawa perpuluhan mempunyai julat yang lebih kecil daripada mata wang.</value>
+    
+  </data>
 </root>
