--- a/src/strings/DataverseResources.ru-RU.resx
+++ b/src/strings/DataverseResources.ru-RU.resx
@@ -212,4 +212,8 @@
     <value>Расчеты со столбцами валют в связанных таблицах в настоящее время не поддерживаются в столбцах формул.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Прямое использование полей валют пока не поддерживается. Используйте десятичное поле CurrencyField в качестве обходного пути, но обратите внимание, что у десятичных полей диапазон меньше, чем у полей валюты.</value>
+    
+  </data>
 </root>
