--- a/src/strings/DataverseResources.uk-UA.resx
+++ b/src/strings/DataverseResources.uk-UA.resx
@@ -212,4 +212,8 @@
     <value>Обчислення зі стовпцями грошових одиниць у пов’язаних таблицях наразі не підтримуються у стовпцях формул.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>Пряме використання полів грошових одиниць наразі не підтримується. Використовуйте Decimal(CurrencyField) в якості обхідного рішення, але зауважте, що функція десяткового значення має менший діапазон, ніж функція грошових одиниць.</value>
+    
+  </data>
 </root>
