--- a/src/strings/DataverseResources.zh-TW.resx
+++ b/src/strings/DataverseResources.zh-TW.resx
@@ -212,4 +212,8 @@
     <value>公式資料行目前不支援使用相關資料表中的貨幣資料行進行計算。</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>目前尚不支援直接使用貨幣欄位。請使用 Decimal(CurrencyField) 做為因應措施，但請注意，小數的範圍小於貨幣。</value>
+    
+  </data>
 </root>
