--- a/src/strings/DataverseResources.pt-PT.resx
+++ b/src/strings/DataverseResources.pt-PT.resx
@@ -212,4 +212,8 @@
     <value>Os cálculos com colunas de moeda em tabelas relacionadas não são atualmente suportados em colunas de fórmula.</value>
     
   </data>
+  <data name="FormulaColumns_DirectCurrencyNotSupported" xml:space="preserve">
+    <value>A utilização direta de campos de moeda ainda não é suportada. Utilize Decimal(CurrencyField) como solução alternativa, mas note que decimal tem um intervalo menor que currency.</value>
+    
+  </data>
 </root>
