--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -216,8 +216,8 @@
     <value>Direct use of currency fields is not yet supported. Use Decimal(CurrencyField) as a workaround but note that decimal has a smaller range than currency.</value>
     <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
-  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
-    <value>The result type OptionSet '{0}' from related tables is not supported in formula columns.</value>
-    <comment>Error Message. Used in formula columns for a formula that uses OptionSet from related tables.</comment>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Optionset {0} isn't recognized. Unable to find metadata for the Option Set.</value>
+    <comment>Error Message. Used in formula columns when optionset info is not found.</comment>
   </data>
 </root>
