--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -217,7 +217,7 @@
     <comment>Error Message. Used in formula columns for a formula that uses currency fields directly expression.</comment>
   </data>
   <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
-    <value>Optionset {0} isn't recognized. Unable to find metadata for the Option Set.</value>
+    <value>The metadata for the Option Set with name {0} was not found.</value>
     <comment>Error Message. Used in formula columns when optionset info is not found.</comment>
   </data>
 </root>
