--- a/src/strings/DataverseResources.en-US.resx
+++ b/src/strings/DataverseResources.en-US.resx
@@ -220,4 +220,8 @@
     <value>The metadata for the Option Set with name {0} was not found.</value>
     <comment>Error Message. Used in formula columns when optionset info is not found.</comment>
   </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>The operation cannot be performed on multiple Option Sets. Please use single Option Set as result type.</value>
+    <comment>Error Message. Used when formula columns use multiple optionsets as result.</comment>
+  </data>
 </root>
